<resources>
    <string name="app_name">Scientific Calculator</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="asterisk">*</string>
    <string name="forward_slash">/</string>
    <string name="equal_to">=</string>
    <string name="clear">C</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="sqrt">√</string>
    <string name="circumflex">^</string>
    <string name="dot">.</string>
    <string name="backspace">AC</string>
    <string name="open_paren">(</string>
    <string name="close_paren">)</string>
    <string name="exp">exp</string>
    <string name="by_menaka">By Menaka</string>
    <string name="powered_by_menaka">Powered by Menaka</string>
</resources>